--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
     "csv-parse": "^5.6.0",
+    "date-fns": "^4.1.0",
     "eslint-plugin-boundaries": "^5.0.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
