--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "eslint-plugin-boundaries": "^5.0.1",
