--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,12 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# 환경변수 파일은 git에 올리지 않음
+.env
+.env.local
+
+# 예시 파일은 포함
+!.env.example
 
 # vercel
 .vercel
